--- a/css/style.css
+++ b/css/style.css
@@ -656,7 +656,7 @@ ul.timeline li .data .text {
 #labp-heads-wrap {
 	/*background-color: #03bb7a;*/
 	position: relative;
-	height: 180px; 
+	height: 180px;
 }
 
 #labp-heads-wrap:after {
@@ -745,6 +745,107 @@ ul.timeline li .data .text {
 #lab-details h3 {
 	margin-top: 0;
 }
+
+
+
+
+
+/*************************************************
+ * news section
+ **************************************************/
+
+ #labn-heads-wrap {
+	 background-color: #03bb7a;
+	 position: relative;
+	 height: 180px;
+ }
+
+ #labn-heads-wrap:after {
+	 top: 100%;
+	 border: solid transparent;
+	 content: " ";
+	 height: 0;
+	 width: 0;
+	 position: absolute;
+	 pointer-events: none;
+	 border-color: rgba(247, 103, 103, 0);
+	 /*border-top-color: #03bb7a;*/
+	 border-width: 15px;
+	 left: 50%;
+	 margin-left: -15px;
+ }
+
+ #labn-carousel {
+	 width: 100%;
+	 height: 200px;
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+ }
+
+ #labn-carousel div {
+	 float: left;
+	 width: 100px;
+	 height: 100px;
+ }
+
+ #labn-carousel img {
+	 border: none;
+	 position: relative;
+
+	 -webkit-box-shadow: 0 0 10px #000;
+	 box-shadow: 0 0 10px #000;
+ }
+
+ .caroufredsel_wrapper {
+	 margin-top: -20px !important;
+	 padding-top: 40px !important;
+	 padding-bottom: 40px !important;
+ }
+
+ #labn-heads-wrap #nextn,#labn-heads-wrap #prevn {
+	 position: absolute;
+	 top: 0;
+	 height: 100%;
+	 line-height: 180px;
+	 padding: 0 10px;
+	 color: #f7f7f7;
+	 font-size: 30px;
+	 z-index: 4;
+ }
+
+ #labn-heads-wrap #nextn {
+	 right: 0;
+ }
+
+ #labn-heads-wrap #prevn {
+	 left: 0;
+ }
+
+ #labn-heads-wrap #prevn.disabled,#labn-heads-wrap #nextn.disabled {
+	 color: #ccc;
+	 cursor: default;
+ }
+
+ #labn-details {
+	 background-color: #fff;
+	 padding: 20px;
+	 padding-top: 40px;
+	 text-align: center;
+	 min-height: 150px;
+
+	 -webkit-box-shadow: 0px 3px 3px -3px #ccc;
+	 box-shadow: 0px 3px 3px -3px #ccc;
+	 border-radius: 2px;
+ }
+
+ #labn-details div {
+	 display: none;
+ }
+
+ #labn-details h3 {
+	 margin-top: 0;
+ }
 
 /* filter dropdowns
  **************************************************/
